# CG

CG_Fase2/Solar-System/engine/: CMakeLists.txt  Camera.cpp  Shape.cpp  Transformation.cpp  engine.cpp  parser.cpp
CG_Fase2/Solar-System/engine/headers/: Shape.h  Transformation.h  engine.h  parser.h
CG_Fase2/Solar-System/files/: SolarSystem.xml
CG_Fase2/Solar-System/generator/: CMakeLists.txt  figures.cpp  generator.cpp
CG_Fase2/Solar-System/generator/headers/: figures.h
CG_Fase3/engine/: CMakeLists.txt  Group.cpp  Shape.cpp  Transformation.cpp  engine.cpp  parser.cpp  tinyxml2.cpp
CG_Fase3/engine/headers/: Camera.h  Group.h  Point.h  Shape.h  Transformation.h  engine.h  parser.h
CG_Fase3/files/: SolarSystem.xml  box.xml  cone.xml  cylinder.xml  plane.xml  sphere.xml  torus.xml
CG_Fase3/generator/: CMakeLists.txt  Patch.cpp  generator.cpp
CG_Fase3/generator/headers/: Patch.h  Point.h  figures.h
CG_Fase4/engine/: CMakeLists.txt  Camera.cpp  Light.cpp  Material.cpp  Point.cpp  Scene.cpp  Shape.cpp  Transformation.cpp  engine.cpp  parser.cpp
CG_Fase4/engine/headers/: Camera.h  Group.h  Light.h  Material.h  Point.h  Scene.h  Shape.h  Transformation.h  engine.h  parser.h
CG_Fase4/files/: SolarSystem.xml  box.xml  comet.xml  cone.xml  cylinder.xml  plane.xml  sphere.xml  torus.xml
CG_Fase4/generator/: CMakeLists.txt  Patch.cpp  Point.cpp  figures.cpp  generator.cpp
CG_Fase4/generator/headers/: Patch.h  figures.h
CG_fase1/engine/: CMakeLists.txt  engine.cpp  engine.h
CG_fase1/files/: boxCone.xml  planeSphere.xml
CG_fase1/generator/: CMakeLists.txt  figures.cpp  figures.h  generator.cpp  generator.h
